corrections to previous commit making images static if viewed on mobile

--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ footer {
 
 @media only screen and (max-width:900px) {
 
-    #header,
+    header,
     #top-main,
     #middle-main,
     #bottom-main {
